--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,10 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fontsource-variable/open-sans": "^5.0.30",
+    "@fontsource-variable/raleway": "^5.0.21",
+    "@fontsource/open-sans": "^5.0.29",
+    "@fontsource/raleway": "^5.0.20",
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.436.0",
     "react": "^18.3.1",
