--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@fontsource-variable/raleway": "^5.0.21",
     "@fontsource/open-sans": "^5.0.29",
     "@fontsource/raleway": "^5.0.20",
+    "axios": "^1.7.6",
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.436.0",
     "react": "^18.3.1",
