--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@fontsource-variable/raleway": "^5.0.21",
     "@fontsource/open-sans": "^5.0.29",
     "@fontsource/raleway": "^5.0.20",
+    "@hookform/resolvers": "^3.9.0",
     "axios": "^1.7.6",
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.436.0",
@@ -25,7 +26,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
